* Author: Mike FABIAN <mfabian@redhat.com>
* 04 Oct 2017 Released 1.5.34 version
* Update translations from zanata (cs new, de updated)
* Add some tooltips
* Add an option whether to use pango font fallback to emoji-picker
* Update emoji annotations from CLDR

* Author: Mike FABIAN <mfabian@redhat.com>
* 11 Sep 2017 Released 1.5.33 version
* Update translations from zanata (es new)
* Install appstream metadata to /usr/share/metainfo/
* Update UnicodeData.txt to Unicode 10.0.0
* Update emoji annotations from CLDR
* Skip the emoji which already have skin tone modifiers in itb_emoji.emoji_by_label()
* Never load characters of Unicode categories “Cc”, “Co”, and “Cs” into the emoji dictionary
* Update emoji-data.txt to 5.0

* Author: Mike FABIAN <mfabian@redhat.com>
* 24 Apr 2017 Released 1.5.32 version
* Fix error when starting emoji-picker when the “recently-used” does not yet exist
* Update emojione.json to version 3.0
* Add the data from CLDR common/annotationsDerived
* Load also the CLDR annotations from “annotationsDerived”

* Author: Mike FABIAN <mfabian@redhat.com>
* 18 Apr 2017 Released 1.5.31 version
* Rename option --use_vs16 to --non_fully_qualified (effectivly reversing the default)
* Make description labels in info popover selectable to be able to copy and paste their contents
* Sort similar emoji with the same number of matching labels by cldr_order distance
* Map cldr subgroup 'person-sport' to emojione category 'activity'
* Make the categorie listings and the search work right when using --use_vs16
* Always store only non-fully-qualified emoji or emoji-sequences in the internal dictionary
* Update emoji annotations from CLDR

* Author: Mike FABIAN <mfabian@redhat.com>
* 29 Mar 2017 Released 1.5.30 version
* Update translations from zanata (de, pl, uk updated)
* Use string order as a fallback to cldr_order in category listings
* The rainbow flag should be a zwj sequence
* Also display the Unicode version in the emoji info popover